--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ allprojects {
     ext {
         appName = "injector"
         gdxVersion = '1.9.10'
+        junitJupiterVersion = '5.6.1'
+        mockitoVersion = '3.3.3'
     }
 
     repositories {
@@ -41,6 +43,17 @@ project(":injector") {
 
     dependencies {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
+
+        // JUnit Jupiter API and TestEngine implementation
+        testImplementation "org.junit.jupiter:junit-jupiter-api:$junitJupiterVersion"
+        testRuntime "org.junit.jupiter:junit-jupiter-engine:$junitJupiterVersion"
+
+        // Mockito
+        testImplementation "org.mockito:mockito-core:$mockitoVersion"
+    }
+
+    test {
+        useJUnitPlatform()
     }
 
     task sourcesJar(type: Jar, dependsOn: classes) {
